# realworld-c-civetweb

./: .gitignore  BUGS.md  default.nix  flake.nix  result
openapi/api/: ArticlesAPI.c  ArticlesAPI.h  CommentsAPI.c  CommentsAPI.h  FavoritesAPI.c  FavoritesAPI.h  TagsAPI.h  UserAndAuthenticationAPI.c  UserAndAuthenticationAPI.h
openapi/model/: article.c  article.h  comment.c  comment.h  create_article_comment_200_response.c  create_article_comment_200_response.h  create_article_comment_request.c  create_article_request.c  create_article_request.h  create_user_request.c  generic_error_model.c  generic_error_model_errors.c  generic_error_model_errors.h  get_article_comments_200_response.h  get_articles_feed_200_response.c  get_profile_by_username_200_response.c  get_profile_by_username_200_response.h  get_tags_200_response.c  login_200_response.h  login_request.c  login_request.h  new_article.c  new_comment.c  new_comment.h  new_user.c  new_user.h  profile.h  update_current_user_request.c  update_user.h  user.c
src/: CMakeLists.txt  appctx.h  db.c  db.h  macros.h  main.c  stubs.c  stubs.h  util.c  util.h
src/app/: appctx.h  db.c  db.h  log.h  macros.h  main.c  stubs.c  util.c  util.h
src/db/: db.c  db.h
src/handlers/: user.c  user.h
src/iface/: UserAndAuthenticationAPI.h
src/impl/: UserAndAuthenticationAPI.c
src/openapi/api/: ProfileAPI.c  ProfileAPI.h  TagsAPI.c  UserAndAuthenticationAPI.c  UserAndAuthenticationAPI.h
src/openapi/handlers/: user.c  user.h
src/openapi/include/: list.h
src/openapi/model/: article.h  comment.h  create_article_201_response.c  create_article_201_response.h  create_article_comment_200_response.h  create_article_comment_request.h  create_article_request.h  create_user_request.h  generic_error_model.h  generic_error_model_errors.h  get_article_comments_200_response.c  get_article_comments_200_response.h  get_articles_feed_200_response.h  get_profile_by_username_200_response.h  get_tags_200_response.h  login_200_response.c  login_200_response.h  login_request.h  login_user.c  login_user.h  new_article.h  new_comment.h  new_user.h  object.h  profile.c  profile.h  update_article.c  update_article.h  update_article_request.c  update_article_request.h  update_current_user_request.h  update_user.c  update_user.h  user.h
src/platform/: default.h  platform.h  win32.h
test/: CMakeLists.txt  test_util.c
